--- a/index.html
+++ b/index.html
@@ -12,15 +12,23 @@
     
 </head>
 <body>
-
+    <header>
+        Logo & Nav
+    </header>
     <Section class="events">
         <div>
-            <div class="workshop-img">
-                <img src="" alt="">
+            <div class="events-img">
+                <img src="images/photo-workshop.jpg" alt="Photo Workshop">
             </div>
-            <div>
-                <p class="workshop">
+            <div class="events-text">
+                <p class="p3">
+                    Dato
+                </p>
+                <p class="p2">
                     Photo Workshop
+                </p>
+                <p class="p4">
+                    Lokation
                 </p>
             </div>
 
