--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
             <div class="events-img">
                 <img src="images/photo-workshop.jpg" alt="Photo Workshop">
             </div>
-            <div class="events-text">
-                <p class="p3">
-                    Dato
-                </p>
-                <p class="p2">
-                    Photo Workshop
-                </p>
-                <p class="p4">
-                    Lokation
-                </p>
+
+            <div class="parent">
+                <div class="div1"> Dato 20/11 </div>
+                <div class="div2"> Photo Workshop </div>
+                <div class="div3"> Lokation </div>
+                <div class="div4 p3"> 8 af 20 Deltagere </div>
+                <div class="div5 p3"> Tolderlundsvej 92 5000 Odense </div>
+                </div>
+
+
             </div>
 
         </div>
