Flex Container and Grid

--- a/index.html
+++ b/index.html
@@ -15,25 +15,42 @@
     <header>
         Logo & Nav
     </header>
-    <Section class="events">
+
+    <section class="flex-container">
         <div>
             <div class="events-img">
                 <img src="images/photo-workshop.jpg" alt="Photo Workshop">
             </div>
-
             <div class="parent">
-                <div class="div1"> Dato 20/11 </div>
-                <div class="div2"> Photo Workshop </div>
-                <div class="div3"> Lokation </div>
-                <div class="div4 p3"> 8 af 20 Deltagere </div>
-                <div class="div5 p3"> Tolderlundsvej 92 5000 Odense </div>
-                </div>
-
-
+                <div class="div1 p2"> Photo Workshop </div>
+                <div class="div2 p3"> 29. November 2022 </div>
+                <div class="div3 p3"> 15:30 </div>
+                <div class="div4 p3"> Seebladsgade 1, 5000 Odense C </div>
             </div>
-
         </div>
-    </Section>
+        <div>
+            <div class="events-img">
+                <img src="images/photo-workshop.jpg" alt="Photo Workshop">
+            </div>
+            <div class="parent">
+                <div class="div1 p2"> Photo Workshop </div>
+                <div class="div2 p3"> 29. November 2022 </div>
+                <div class="div3 p3"> 15:30 </div>
+                <div class="div4 p3"> Seebladsgade 1, 5000 Odense C </div>
+            </div>
+        </div>
+        <div>
+            <div class="events-img">
+                <img src="images/photo-workshop.jpg" alt="Photo Workshop">
+            </div>
+            <div class="parent">
+                <div class="div1 p2"> Photo Workshop </div>
+                <div class="div2 p3"> 29. November 2022 </div>
+                <div class="div3 p3"> 15:30 </div>
+                <div class="div4 p3"> Seebladsgade 1, 5000 Odense C </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 <script src="main.js"></script>
