--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         Logo & Nav
     </header>
 
+    <section class="search-section">
+
+    </section>
+
     <section class="flex-container">
         <div>
             <div class="events-img">
