--- a/index.html
+++ b/index.html
@@ -12,10 +12,19 @@
     
 </head>
 <body>
+    <!--**********Header Section**********-->
     <header>
         Logo & Profil
+        <div class="logo-img">
+
+        </div>
+
+        <div class="profil">
+
+        </div>
     </header>
 
+    <!--**********Search Section**********-->
     <section class="search-section">
 
     </section>
