Added imgs to header

--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
 <body>
     <!--**********Header Section**********-->
     <header>
-        Logo & Profil
+        
         <div class="logo-img">
-
+            <img src="/images/upcoming_logo.png" alt="Upcoming Logo">
         </div>
 
         <div class="profil">
-
+            <img src="https://img.icons8.com/color/96/000000/test-account.png"/>
         </div>
+        
     </header>
 
     <!--**********Search Section**********-->
@@ -67,5 +68,7 @@
 </body>
 
 <script src="main.js"></script>
+
+<a target="_blank" href="https://icons8.com/icon/z-JBA_KtSkxG/test-account">Test Account icon by Icons8</a>
 
 </html>
