--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <img src="/images/upcoming_logo.png" alt="Upcoming Logo">
         </div>
 
-        <div class="profil">
+        <div class="profil-img">
             <img src="https://img.icons8.com/color/96/000000/test-account.png"/>
         </div>
-        
+
     </header>
 
     <!--**********Search Section**********-->
