--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Upcoming</title>
     
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
 </head>
 <body>
@@ -27,6 +28,20 @@
 
     <!--**********Search Section**********-->
     <section class="search-section">
+
+        <div class="create-event">
+
+        </div>
+
+        <div class="search-category">
+
+        </div>
+
+        <div class="search-box">
+            <div class="search-icon">
+                <i class="search fa fa-search"></i>
+            </div>
+        </div>
 
     </section>
 
