--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
     <!--**********Header Section**********-->
     <header>
         
-        <div class="logo-img">
+        <div class="header-container">
+             <div class="logo-img">
             <img src="/images/upcoming_logo.png" alt="Upcoming Logo">
-        </div>
+            </div>
 
-        <div class="profil-img">
-            <img src="https://img.icons8.com/color/96/000000/test-account.png"/>
+            <div class="profil-img">
+                <img src="https://img.icons8.com/color/96/000000/test-account.png"/>
+            </div>
         </div>
+       
 
     </header>
 
