search box hover

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <div class="search-icon">
                 <i class="search fa fa-search"></i>
             </div>
+            <div class="search-input">
+                
+            </div>
         </div>
 
     </section>
