--- a/index.html
+++ b/index.html
@@ -51,8 +51,19 @@
 
     </section>
 
-    <section class="flex-container">
-        <div>
+    <section class="event-section">
+        <div class="events">
+            <div class="events-img">
+                <img src="images/Padel Tennis.jpg" alt="Photo Workshop">
+            </div>
+            <div class="parent">
+                <div class="div1 p2"> Photo Workshop </div>
+                <div class="div2 p3"> 29. November 2022 </div>
+                <div class="div3 p3"> 15:30 </div>
+                <div class="div4 p3"> Seebladsgade 1, 5000 Odense C </div>
+            </div>
+        </div>
+        <div class="events">
             <div class="events-img">
                 <img src="images/photo-workshop.jpg" alt="Photo Workshop">
             </div>
@@ -63,20 +74,9 @@
                 <div class="div4 p3"> Seebladsgade 1, 5000 Odense C </div>
             </div>
         </div>
-        <div>
+        <div class="events">
             <div class="events-img">
-                <img src="images/photo-workshop.jpg" alt="Photo Workshop">
-            </div>
-            <div class="parent">
-                <div class="div1 p2"> Photo Workshop </div>
-                <div class="div2 p3"> 29. November 2022 </div>
-                <div class="div3 p3"> 15:30 </div>
-                <div class="div4 p3"> Seebladsgade 1, 5000 Odense C </div>
-            </div>
-        </div>
-        <div>
-            <div class="events-img">
-                <img src="images/photo-workshop.jpg" alt="Photo Workshop">
+                <img src="images/Havnebad.jpg" alt="Photo Workshop">
             </div>
             <div class="parent">
                 <div class="div1 p2"> Photo Workshop </div>
