--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
             <img src="/images/upcoming_logo.png" alt="Upcoming Logo">
             </div>
 
-            <div class="profil-img">
-                <img src="https://img.icons8.com/color/96/000000/test-account.png"/>
+            <div class="profile">
+                <div class="profile-icon">
+                    <i class="fa-solid fa-user"></i>
+                </div>
             </div>
         </div>
        
