Changed profile icon

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <div class="profile">
                 <div class="profile-icon">
-                    <i class="fa-solid fa-user"></i>
+                    <i class="fa fa-user" aria-hidden="true"></i>
                 </div>
             </div>
         </div>
@@ -91,7 +91,5 @@
 </body>
 
 <script src="main.js"></script>
-
-<a target="_blank" href="https://icons8.com/icon/z-JBA_KtSkxG/test-account">Test Account icon by Icons8</a>
 
 </html>
