--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         
         <div class="header-container">
              <div class="logo-img">
-            <img src="/images/upcoming_logo.png" alt="Upcoming Logo">
+                <img src="/images/upcoming_logo.png" alt="Upcoming Logo">
             </div>
 
             <div class="profile">
                 <div class="profile-icon">
-                    <i class="fa fa-user" aria-hidden="true"></i>
+                    <img src="images/profile-icon.png" alt="Profile icon">
                 </div>
             </div>
         </div>
