--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
         
         <div class="header-container">
              <div class="logo-img">
-                <img src="/images/upcoming_logo.png" alt="Upcoming Logo">
+                <a href="#"> <!--LINK TO HOME PAGE-->
+                    <img src="/images/upcoming_logo.png" alt="Upcoming Logo">
+                </a>
             </div>
 
             <div class="profile">
                 <div class="profile-icon">
-                    <img src="images/profile-icon.png" alt="Profile icon">
+                    <a href="#"> <!--LINK TO PROFILE PAGE-->
+                        <img src="images/profile-icon.png" alt="Profile icon">
+                    </a>
                 </div>
             </div>
         </div>
@@ -53,6 +57,7 @@
 
     </section>
 
+    <!--**********Event Section**********-->
     <section class="event-section">
         <div class="events">
             <div class="events-img">
@@ -88,6 +93,23 @@
             </div>
         </div>
     </section>
+
+    <!--**********Footer Section**********-->
+    <footer>
+
+        <div class="footer-content">
+            <img src="images/upcoming_logo.png" alt="Upcoming logo">
+
+            <p>Upcoming er en side der hjælper dig med at holde styre på de kommende events på UCL.
+                Har du en fed ide til en begivenhed? Opret den her og lad de andre studerende melde sig til!
+            </p>
+
+            <ul class="socials-link">
+                <a href="#"><i class="fa fa-instagram"></i></a>
+            </ul>
+        </div>
+    </footer>
+
 </body>
 
 <script src="main.js"></script>
