Link til profil siden sat ind

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <div class="profile">
                 <div class="profile-icon">
-                    <a href="#"> <!--LINK TO PROFILE PAGE-->
+                    <a href="profil.html"> <!--LINK TO PROFILE PAGE-->
                         <img src="images/profile-icon.png" alt="Profile icon">
                     </a>
                 </div>
