--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
         <div class="header-container">
              <div class="logo-img">
-                <a href="#"> <!--LINK TO HOME PAGE-->
+                <a href="index.html"> <!--LINK TO HOME PAGE-->
                     <img src="/images/upcoming_logo.png" alt="Upcoming Logo">
                 </a>
             </div>
