--- a/index.html
+++ b/index.html
@@ -92,6 +92,17 @@
                 <div class="div4 p3"> Seebladsgade 1, 5000 Odense C </div>
             </div>
         </div>
+        <div class="events">
+            <div class="events-img">
+                <img src="images/Havnebad.jpg" alt="Photo Workshop">
+            </div>
+            <div class="parent">
+                <div class="div1 p2"> Photo Workshop </div>
+                <div class="div2 p3"> 29. November 2022 </div>
+                <div class="div3 p3"> 15:30 </div>
+                <div class="div4 p3"> Seebladsgade 1, 5000 Odense C </div>
+            </div>
+        </div>
     </section>
 
     <!--**********Footer Section**********-->
