--- a/profil.html
+++ b/profil.html
@@ -55,7 +55,7 @@
         </div-container>
     
     
-        <div class="indstillinger"><button class="btn_indstillinger">Profil indstillinger</button></div>
+        <div class="settings"><button class="btn_settings">Profil indstillinger</button></div>
     </main>
 
     <footer>
