a whole lot of shizzle

--- a/profil.html
+++ b/profil.html
@@ -18,7 +18,7 @@
     </header>
 
     <main class="site_wrapper">
-        <div class="egne_events">
+        <div class="section_header">
             <h2>Dine egne events</h2>
         </div>
 
@@ -31,7 +31,7 @@
             </div>
         </div-container>
     
-        <div class="du_deltager">
+        <div class="section_header">
             <h2>Du deltager i</h2>
         </div>
     
