--- a/profil.html
+++ b/profil.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="profil.css">
+    <link rel="stylesheet" href="https://use.typekit.net/xrc6ark.css">
     <title>Profile</title>
     <script src="https://kit.fontawesome.com/50d4f6a023.js" crossorigin="anonymous"></script>
    
