--- a/profil.html
+++ b/profil.html
@@ -13,7 +13,7 @@
 <body>
     <header class="site_wrapper">
         <div-container class="logo_icon">
-            <div class="upcoming_img"><img src="images/upcoming_logo.png" alt="Upcoming logo"></div>
+            <div class="upcoming_img"><img src="images/Upcoming_logo_v2.png" alt="Upcoming logo"></div>
             <div class="house_align"><p class="house"><a href="index.html"><i class="fa-solid fa-house"></i></a></p></div>
         </div>
     </header>
