--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="user_align">
             <p class="user">
-                <a href="index.html">
+                <a href="profil.html">
                     <i class="fa-solid fa-user"></i>
                 </a>
             </p>
