--- a/profil.html
+++ b/profil.html
@@ -27,7 +27,7 @@
             <div class="event_card">
                 <img class="padeltennis_img" src="images/Padel Tennis.jpg" alt="Padel Tennis">
                 <h3>Padel Tennis</h3>
-                <p class="date_time"><i class="fa-regular fa-calendar-days"></i> 28. November 2022 <i class="fa-regular fa-clock"></i> 16:30</p>
+                <p class="date_time"><i class="fa-regular fa-calendar-days"></i> 28. Nov. 2022 <i class="fa-regular fa-clock"></i> 16:30</p>
                 <p><i class="fa-solid fa-location-dot"></i> Tolderlundsvej 92, 5000 Odense</p>
             </div>
         </div-container>
@@ -40,13 +40,15 @@
             <div class="event_card">
                 <img class="photo_img" src="images/photo-workshop.jpg" alt="Photo Workshop">
                 <h3>Photo Workshop</h3>
-                <p class="date_time"><i class="fa-regular fa-calendar-days"></i> 29. November 2022 <i class="fa-regular fa-clock"></i> 15:30</p>
+                <p class="date_time"><i class="fa-regular fa-calendar-days"></i> 29. Nov. 2022 <i class="fa-regular fa-clock"></i> 15:30</p>
                 <p><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C</p>
             </div>
     
             <div class="event_card">
-                <img class="photo_img" src="images/photo-workshop.jpg" alt="Photo Workshop">
-                <div class="photo_tekst"><p>Photo Workshop</p></div>
+                <img class="photo_img" src="images/Havnebad.jpg" alt="Havnebad event">
+                <h3>Photo Workshop</h3>
+                <p class="date_time"><i class="fa-regular fa-calendar-days"></i> 2. Jan. 2022 <i class="fa-regular fa-clock"></i> 09:30</p>
+                <p><i class="fa-solid fa-location-dot"></i> Gamle Havnekaj 3, 5000 Odense C</p>
             </div>
     
             <div class="event_card">
