--- a/profil.html
+++ b/profil.html
@@ -46,7 +46,7 @@
     
             <div class="event_card">
                 <img class="photo_img" src="images/Havnebad.jpg" alt="Havnebad event">
-                <h3>Photo Workshop</h3>
+                <h3>Nytårs Vinterbadning</h3>
                 <p class="date_time"><i class="fa-regular fa-calendar-days"></i> 2. Jan. 2022 <i class="fa-regular fa-clock"></i> 09:30</p>
                 <p><i class="fa-solid fa-location-dot"></i> Gamle Havnekaj 3, 5000 Odense C</p>
             </div>
