"Tilbage til forsiden" knap

--- a/profil.html
+++ b/profil.html
@@ -59,6 +59,8 @@
     
     
         <div class="settings"><button class="btn_settings">Profil indstillinger</button></div>
+
+        <div class="back_frontpage"><button class="btn_back_frontpage">Tilbage til forsiden</button></div>
     </main>
 
     <footer>
