--- a/profil.html
+++ b/profil.html
@@ -47,13 +47,15 @@
             <div class="event_card">
                 <img class="photo_img" src="images/Havnebad.jpg" alt="Havnebad event">
                 <h3>Nytårs Vinterbadning</h3>
-                <p class="date_time"><i class="fa-regular fa-calendar-days"></i> 2. Jan. 2022 <i class="fa-regular fa-clock"></i> 09:30</p>
+                <p class="date_time"><i class="fa-regular fa-calendar-days"></i> 2. Jan. 2023 <i class="fa-regular fa-clock"></i> 09:30</p>
                 <p><i class="fa-solid fa-location-dot"></i> Gamle Havnekaj 3, 5000 Odense C</p>
             </div>
     
             <div class="event_card">
-                <img class="photo_img" src="images/photo-workshop.jpg" alt="Photo Workshop">
-                <div class="photo_tekst"><p>Photo Workshop</p></div>
+                <img class="photo_img" src="images/poster_laesenoter.jpg" alt="Notatteknik">
+                <h3>Notatteknik</h3>
+                <p class="date_time"><i class="fa-regular fa-calendar-days"></i> 3. Feb. 2023 <i class="fa-regular fa-clock"></i> 15:30</p>
+                <p><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C</p>
             </div>
         </div-container>
     
