--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div-container class="logo_icon">
         <div class="upcoming_img">
-            <img src="images/upcoming_logo.png" alt="Upcoming logo">
+            <img src="images/Upcoming_logo_v2.png" alt="Upcoming logo">
         </div>
 
         <div class="user_align">
