--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <footer>
 
         <div class="footer-content">
-            <img src="images/upcoming_logo.png" alt="Upcoming logo">
+            <img src="images/Upcoming_logo_v2.png" alt="Upcoming logo">
 
             <p>Upcoming er en side der hjælper dig med at holde styre på de kommende events på UCL.
                 Har du en fed ide til en begivenhed? Opret den her og lad de andre studerende melde sig til!
