--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <script src="https://kit.fontawesome.com/50d4f6a023.js" crossorigin="anonymous"></script>
     
 </head>
 <body>
@@ -54,6 +56,12 @@
 
     </section>
 
+    <!--**********Titel Section**********-->
+
+    <div class="section_header">
+        <h2>Kommende begivenheder på UCL</h2>
+    </div>
+
     <!--**********Event Section**********-->
     <section class="event-section">
         <div class="events">
@@ -62,9 +70,9 @@
             </div>
             <div class="parent">
                 <div class="div1 p2"> Photo Workshop </div>
-                <div class="div2 p3"> 29. November 2022 </div>
-                <div class="div3 p3"> 15:30 </div>
-                <div class="div4 p3"> Seebladsgade 1, 5000 Odense C </div>
+                <div class="div2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 29. Nov 2022 </div>
+                <div class="div3 p3-purple"><i class="fa-regular fa-clock"></i> 15:30 </div>
+                <div class="div4 p3"><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C </div>
             </div>
         </div>
         <div class="events">
@@ -73,9 +81,9 @@
             </div>
             <div class="parent">
                 <div class="div1 p2"> Photo Workshop </div>
-                <div class="div2 p3"> 29. November 2022 </div>
-                <div class="div3 p3"> 15:30 </div>
-                <div class="div4 p3"> Seebladsgade 1, 5000 Odense C </div>
+                <div class="div2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 29. Nov 2022 </div>
+                <div class="div3 p3-purple"><i class="fa-regular fa-clock"></i> 15:30 </div>
+                <div class="div4 p3"><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C </div>
             </div>
         </div>
         <div class="events">
@@ -84,9 +92,9 @@
             </div>
             <div class="parent">
                 <div class="div1 p2"> Photo Workshop </div>
-                <div class="div2 p3"> 29. November 2022 </div>
-                <div class="div3 p3"> 15:30 </div>
-                <div class="div4 p3"> Seebladsgade 1, 5000 Odense C </div>
+                <div class="div2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 29. Nov 2022 </div>
+                <div class="div3 p3-purple"><i class="fa-regular fa-clock"></i> 15:30 </div>
+                <div class="div4 p3"><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C </div>
             </div>
         </div>
         <div class="events">
@@ -95,9 +103,9 @@
             </div>
             <div class="parent">
                 <div class="div1 p2"> Photo Workshop </div>
-                <div class="div2 p3"> 29. November 2022 </div>
-                <div class="div3 p3"> 15:30 </div>
-                <div class="div4 p3"> Seebladsgade 1, 5000 Odense C </div>
+                <div class="div2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 29. Nov 2022 </div>
+                <div class="div3 p3-purple"><i class="fa-regular fa-clock"></i> 15:30 </div>
+                <div class="div4 p3"><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C </div>
             </div>
         </div>
     </section>
