--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script src="https://kit.fontawesome.com/50d4f6a023.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/364947b7d1.js" crossorigin="anonymous"></script>
     
 </head>
 <body>
