--- a/index.html
+++ b/index.html
@@ -51,18 +51,22 @@
 
             <!--Filter-->
             <div class="search-category">
+
                 <div class="campus">
                     <p>Campus</p>
                     <i class="fa-solid fa-chevron-down"></i>
                 </div>
-                <div class="kategori">
+
+                <div class="category">
                     <p>Kategori</p>
                     <i class="fa-solid fa-chevron-down"></i>
                 </div>
+
                 <div class="dato">
                     <p>Dato</p>
                     <i class="fa-solid fa-chevron-down"></i>
                 </div>
+                
             </div>
 
             <!--Search box-->
