--- a/profil.html
+++ b/profil.html
@@ -62,7 +62,7 @@
     
         <div class="settings"><button class="btn_settings">Profil indstillinger</button></div>
 
-        <div class="back_frontpage"><button class="btn_back_frontpage">Tilbage til forsiden</button></div>
+        <div class="back_frontpage"><a href="index.html"><button class="btn_back_frontpage">Tilbage til forsiden</button></a></div>
     </main>
 
     <footer>
