--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="user_align">
                 <p class="user">
                     <a href="profil.html">
-                        <i class="fa-solid fa-user"></i>
+                        <i class="fa-regular fa-user"></i>
                     </a>
                 </p>
             </div>
