A whole lot of shizzle

--- a/index.html
+++ b/index.html
@@ -59,10 +59,14 @@
                         <i class="fa-solid fa-chevron-down"></i>
                     </div>
 
+                    <div class="divider"></div>
+
                     <div class="category">
                         <p>Kategori</p>
                         <i class="fa-solid fa-chevron-down"></i>
                     </div>
+
+                    <div class="divider"></div>
 
                     <div class="dato">
                         <p>Dato</p>
