--- a/profil.html
+++ b/profil.html
@@ -65,8 +65,15 @@
         <div class="back_frontpage"><a href="index.html"><button class="btn_back_frontpage">Tilbage til forsiden</button></a></div>
     </main>
 
+    <!--**********Footer Section**********-->
     <footer>
-        <div><i class="fa-brands fa-instagram"></i></div>
+
+        <div class="footer-content">
+            <img src="images/Upcoming_logo_v2.png" alt="Upcoming logo">
+
+            <a href="#"><i class="fa fa-instagram"></i></a>
+        </div>
     </footer>
+    
 </body>
 </html>
