Added popup section
I added a popup section

--- a/index.html
+++ b/index.html
@@ -154,6 +154,28 @@
 
         </section>
     </main>
+    <!--**********Event Popup Section**********-->
+    <section class="popup-section">
+        <div class="popup-events">
+            <button class="event-close-btn">&times;</button>
+            <img class="popup-img" src="images/photo-workshop.jpg" alt="Photo Workshop">
+            <div class="popup-text">
+                <p class="popup-title">Photo Workshop</p>
+                <p class="popup-date"><i class="fa-regular fa-calendar-days"></i> 24. Nov. 2022 </p>
+                <p class="popup-time"><i class="fa-regular fa-clock"></i> 15:30 </p>
+                <p class="popup-adress"><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C </p>
+                <p class="popup-desc">Vil du gerne lære at tage det perfekte fotografi? Så tøv ikke. Tilmeld dig denne workshop. Jeg har personligt 12 års erfaring som professionel fotograf og har rejst i store dele af verden for at fotografere. Jeg elsker at lære fra mig og selv at lære, alle er velkomne begyndere såvel som erfarne fotografer.
+    
+                    Vi mødes i lokale b0.05 for et kort oplæg, for derefter at gå en tur i Odense og få skudt et par fede billeder!
+                    
+                    Glæder mig til at se jer!
+                    PS. Husk kamera eller mobil telefon til fotografering</p>
+            </div>
+            <button>
+                click
+            </button>
+        </div>
+    </section>
 
     <!--**********Footer Section**********-->
     <footer>
