--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="events-img">
                     <img src="images/Padel Tennis.jpg" alt="Photo Workshop">
                 </div>
-                <div class="parent">
+                <div class="text-grid">
                     <div class="div1 p2"> Photo Workshop </div>
                     <div class="div2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 29. Nov 2022 </div>
                     <div class="div3 p3-purple"><i class="fa-regular fa-clock"></i> 15:30 </div>
@@ -111,7 +111,7 @@
                 <div class="events-img">
                     <img src="images/photo-workshop.jpg" alt="Photo Workshop">
                 </div>
-                <div class="parent">
+                <div class="text-grid">
                     <div class="div1 p2"> Photo Workshop </div>
                     <div class="div2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 29. Nov 2022 </div>
                     <div class="div3 p3-purple"><i class="fa-regular fa-clock"></i> 15:30 </div>
@@ -127,7 +127,7 @@
                 <div class="events-img">
                     <img src="images/Havnebad.jpg" alt="Photo Workshop">
                 </div>
-                <div class="parent">
+                <div class="text-grid">
                     <div class="div1 p2"> Nytårs Vinterbadning </div>
                     <div class="div2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 29. Nov 2022 </div>
                     <div class="div3 p3-purple"><i class="fa-regular fa-clock"></i> 15:30 </div>
@@ -143,7 +143,7 @@
                 <div class="events-img">
                     <img src="images/Havnebad.jpg" alt="Photo Workshop">
                 </div>
-                <div class="parent">
+                <div class="text-grid">
                     <div class="div1 p2"> Nytårs Vinterbadning </div>
                     <div class="div2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 29. Nov 2022 </div>
                     <div class="div3 p3-purple"><i class="fa-regular fa-clock"></i> 15:30 </div>
@@ -159,6 +159,15 @@
         <div class="popup-events">
             <button class="event-close-btn">&times;</button>
             <img class="popup-img" src="images/photo-workshop.jpg" alt="Photo Workshop">
+            <div class="parent">
+                <div class="div1"> </div>
+                <div class="div2"> </div>
+                <div class="div3"> </div>
+                <div class="div4"> </div>
+                <div class="div5"> </div>
+                <div class="div6"> </div>
+                <div class="div7"> </div>
+                </div>
             <div class="popup-text">
                 <p class="popup-title">Photo Workshop</p>
                 <p class="popup-date"><i class="fa-regular fa-calendar-days"></i> 24. Nov. 2022 </p>
