--- a/profil.html
+++ b/profil.html
@@ -50,6 +50,22 @@
                 </div>
             </div>
 
+            <div class="events">
+                <div class="people-count">
+                    <div><i class="fa-solid fa-user"></i></div>
+                    <div class="p4">30/48</div>
+                </div>
+                <div class="events-img">
+                    <img src="images/Havnebad.jpg" alt="Photo Workshop">
+                </div>
+                <div class="parent">
+                    <div class="div1 p2"> Nytårs Vinterbadning </div>
+                    <div class="div2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 29. Nov 2022 </div>
+                    <div class="div3 p3-purple"><i class="fa-regular fa-clock"></i> 15:30 </div>
+                    <div class="div4 p3"><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C </div>
+                </div>
+            </div>
+
             
 
 
