--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
         <!--**********Event Section**********-->
         <section class="event-section">
             <div class="events">
+                <div class="people-count">
+                    <div><i class="fa-solid fa-user"></i></div>
+                    <div class="p4">30/48</div>
+                </div>
                 <div class="events-img">
                     <img src="images/Padel Tennis.jpg" alt="Photo Workshop">
                 </div>
@@ -108,6 +112,10 @@
                 </div>
             </div>
             <div class="events">
+                <div class="people-count">
+                    <div><i class="fa-solid fa-user"></i></div>
+                    <div class="p4">30/48</div>
+                </div>
                 <div class="events-img">
                     <img src="images/photo-workshop.jpg" alt="Photo Workshop">
                 </div>
