--- a/profil.html
+++ b/profil.html
@@ -37,16 +37,16 @@
             <div class="events">
                 <div class="people-count">
                     <div><i class="fa-solid fa-user"></i></div>
-                    <div class="p4">3/8</div>
+                    <div class="p4">32/50</div>
                 </div>
                 <div class="events-img">
-                    <img src="images/Havnebad.jpg" alt="Photo Workshop">
+                    <img src="images/Havnebad.jpg" alt="Havnebad">
                 </div>
                 <div class="parent">
                     <div class="div1 p2"> Nytårs Vinterbadning </div>
-                    <div class="div2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 29. Nov 2022 </div>
-                    <div class="div3 p3-purple"><i class="fa-regular fa-clock"></i> 15:30 </div>
-                    <div class="div4 p3"><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C </div>
+                    <div class="div2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 2. Jan. 2023 </div>
+                    <div class="div3 p3-purple"><i class="fa-regular fa-clock"></i> 9:30 </div>
+                    <div class="div4 p3"><i class="fa-solid fa-location-dot"></i> Gamle Havnekaj 3, 5000 Odense C</div>
                 </div>
             </div>
 
@@ -62,13 +62,6 @@
                 <h3>Photo Workshop</h3>
                 <p class="date_time"><i class="fa-regular fa-calendar-days"></i> 29. Nov. 2022 <i class="fa-regular fa-clock"></i> 15:30</p>
                 <p><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C</p>
-            </div>
-    
-            <div class="event_card">
-                <img class="photo_img" src="images/Havnebad.jpg" alt="Havnebad event">
-                <h3>Nytårs Vinterbadning</h3>
-                <p class="date_time"><i class="fa-regular fa-calendar-days"></i> 2. Jan. 2023 <i class="fa-regular fa-clock"></i> 09:30</p>
-                <p><i class="fa-solid fa-location-dot"></i> Gamle Havnekaj 3, 5000 Odense C</p>
             </div>
     
             <div class="event_card">
