--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
             <div class="events">
                 <div class="people-count">
                     <div><i class="fa-solid fa-user"></i></div>
-                    <div class="p4">30/48</div>
+                    <div class="p4">/8</div>
                 </div>
                 <div class="events-img">
                     <img src="images/Padel Tennis.jpg" alt="Photo Workshop">
                 </div>
-                <div class="text-grid">
-                    <div class="div1 p2"> Photo Workshop </div>
+                <div class="parent">
+                    <div class="div1 p2"> Padel Tennis </div>
                     <div class="div2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 29. Nov 2022 </div>
                     <div class="div3 p3-purple"><i class="fa-regular fa-clock"></i> 15:30 </div>
                     <div class="div4 p3"><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C </div>
@@ -114,12 +114,12 @@
             <div class="events">
                 <div class="people-count">
                     <div><i class="fa-solid fa-user"></i></div>
-                    <div class="p4">30/48</div>
+                    <div class="p4">8/35</div>
                 </div>
                 <div class="events-img">
                     <img src="images/photo-workshop.jpg" alt="Photo Workshop">
                 </div>
-                <div class="text-grid">
+                <div class="parent">
                     <div class="div1 p2"> Photo Workshop </div>
                     <div class="div2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 29. Nov 2022 </div>
                     <div class="div3 p3-purple"><i class="fa-regular fa-clock"></i> 15:30 </div>
@@ -130,12 +130,12 @@
             <div class="events">
                 <div class="people-count">
                     <div><i class="fa-solid fa-user"></i></div>
-                    <div class="p4">30/48</div>
+                    <div class="p4">3/8</div>
                 </div>
                 <div class="events-img">
                     <img src="images/Havnebad.jpg" alt="Photo Workshop">
                 </div>
-                <div class="text-grid">
+                <div class="parent">
                     <div class="div1 p2"> Nytårs Vinterbadning </div>
                     <div class="div2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 29. Nov 2022 </div>
                     <div class="div3 p3-purple"><i class="fa-regular fa-clock"></i> 15:30 </div>
@@ -146,12 +146,12 @@
             <div class="events">
                 <div class="people-count">
                     <div><i class="fa-solid fa-user"></i></div>
-                    <div class="p4">30/48</div>
+                    <div class="p4">3/8</div>
                 </div>
                 <div class="events-img">
                     <img src="images/Havnebad.jpg" alt="Photo Workshop">
                 </div>
-                <div class="text-grid">
+                <div class="parent">
                     <div class="div1 p2"> Nytårs Vinterbadning </div>
                     <div class="div2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 29. Nov 2022 </div>
                     <div class="div3 p3-purple"><i class="fa-regular fa-clock"></i> 15:30 </div>
