--- a/index.html
+++ b/index.html
@@ -99,18 +99,19 @@
             <div class="events">
                 <div class="people-count">
                     <div><i class="fa-solid fa-user"></i></div>
-                    <div class="p4">/8</div>
+                    <div class="p4">6/8</div>
                 </div>
                 <div class="events-img">
                     <img src="images/Padel Tennis.jpg" alt="Photo Workshop">
                 </div>
-                <div class="parent">
-                    <div class="div1 p2"> Padel Tennis </div>
-                    <div class="div2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 29. Nov 2022 </div>
-                    <div class="div3 p3-purple"><i class="fa-regular fa-clock"></i> 15:30 </div>
-                    <div class="div4 p3"><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C </div>
+                <div class="event-text-grid">
+                    <div class="div-grid1 p2"> Padel Tennis </div>
+                    <div class="div-grid2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 28. Nov 2022 </div>
+                    <div class="div-grid3 p3-purple"><i class="fa-regular fa-clock"></i> 16:30 </div>
+                    <div class="div-grid4 p3"><i class="fa-solid fa-location-dot"></i> Tolderlundsvej 92, 5000 Odense </div>
                 </div>
             </div>
+
             <div class="events">
                 <div class="people-count">
                     <div><i class="fa-solid fa-user"></i></div>
@@ -119,47 +120,126 @@
                 <div class="events-img">
                     <img src="images/photo-workshop.jpg" alt="Photo Workshop">
                 </div>
-                <div class="parent">
-                    <div class="div1 p2"> Photo Workshop </div>
-                    <div class="div2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 29. Nov 2022 </div>
-                    <div class="div3 p3-purple"><i class="fa-regular fa-clock"></i> 15:30 </div>
-                    <div class="div4 p3"><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C </div>
+                <div class="event-text-grid">
+                    <div class="div-grid1 p2"> Photo Workshop </div>
+                    <div class="div-grid2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 29. Nov 2022 </div>
+                    <div class="div-grid3 p3-purple"><i class="fa-regular fa-clock"></i> 15:30 </div>
+                    <div class="div-grid4 p3"><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C </div>
                 </div>
             </div>
 
             <div class="events">
                 <div class="people-count">
                     <div><i class="fa-solid fa-user"></i></div>
-                    <div class="p4">3/8</div>
+                    <div class="p4">7/35</div>
                 </div>
                 <div class="events-img">
-                    <img src="images/Havnebad.jpg" alt="Photo Workshop">
+                    <img src="images/photo-workshop.jpg" alt="Photo Workshop">
                 </div>
-                <div class="parent">
-                    <div class="div1 p2"> Nytårs Vinterbadning </div>
-                    <div class="div2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 29. Nov 2022 </div>
-                    <div class="div3 p3-purple"><i class="fa-regular fa-clock"></i> 15:30 </div>
-                    <div class="div4 p3"><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C </div>
+                <div class="event-text-grid">
+                    <div class="div-grid1 p2"> Juleklip </div>
+                    <div class="div-grid2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 3. Dec 2022 </div>
+                    <div class="div-grid3 p3-purple"><i class="fa-regular fa-clock"></i> 16:00 </div>
+                    <div class="div-grid4 p3"><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C </div>
                 </div>
             </div>
 
             <div class="events">
                 <div class="people-count">
                     <div><i class="fa-solid fa-user"></i></div>
-                    <div class="p4">3/8</div>
+                    <div class="p4">12/35</div>
+                </div>
+                <div class="events-img">
+                    <img src="images/photo-workshop.jpg" alt="Photo Workshop">
+                </div>
+                <div class="event-text-grid">
+                    <div class="div-grid1 p2"> Innovation Workshop </div>
+                    <div class="div-grid2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 7. Dec 2022 </div>
+                    <div class="div-grid3 p3-purple"><i class="fa-regular fa-clock"></i> 15:30 </div>
+                    <div class="div-grid4 p3"><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C </div>
+                </div>
+            </div>
+
+            <div class="events">
+                <div class="people-count">
+                    <div><i class="fa-solid fa-user"></i></div>
+                    <div class="p4">2/75</div>
+                </div>
+                <div class="events-img">
+                    <img src="images/photo-workshop.jpg" alt="Photo Workshop">
+                </div>
+                <div class="event-text-grid">
+                    <div class="div-grid1 p2"> Halfdan Timm, Foredrag </div>
+                    <div class="div-grid2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 13. Dec 2022 </div>
+                    <div class="div-grid3 p3-purple"><i class="fa-regular fa-clock"></i> 13:00 </div>
+                    <div class="div-grid4 p3"><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C </div>
+                </div>
+            </div>
+
+            <div class="events">
+                <div class="people-count">
+                    <div><i class="fa-solid fa-user"></i></div>
+                    <div class="p4">2/5</div>
+                </div>
+                <div class="events-img">
+                    <img src="images/photo-workshop.jpg" alt="Photo Workshop">
+                </div>
+                <div class="event-text-grid">
+                    <div class="div-grid1 p2"> Stavis Å, Mountainbike </div>
+                    <div class="div-grid2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 18. Dec 2022 </div>
+                    <div class="div-grid3 p3-purple"><i class="fa-regular fa-clock"></i> 12:00 </div>
+                    <div class="div-grid4 p3"><i class="fa-solid fa-location-dot"></i> Thulevej 15, 5210 Odense </div>
+                </div>
+            </div>
+
+            <div class="events">
+                <div class="people-count">
+                    <div><i class="fa-solid fa-user"></i></div>
+                    <div class="p4">7/++</div>
+                </div>
+                <div class="events-img">
+                    <img src="images/photo-workshop.jpg" alt="Photo Workshop">
+                </div>
+                <div class="event-text-grid">
+                    <div class="div-grid1 p2"> Juleafslutning </div>
+                    <div class="div-grid2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 21. Dec 2022 </div>
+                    <div class="div-grid3 p3-purple"><i class="fa-regular fa-clock"></i> 13:00 </div>
+                    <div class="div-grid4 p3"><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C </div>
+                </div>
+            </div>
+
+            <div class="events">
+                <div class="people-count">
+                    <div><i class="fa-solid fa-user"></i></div>
+                    <div class="p4">3/15</div>
                 </div>
                 <div class="events-img">
                     <img src="images/Havnebad.jpg" alt="Photo Workshop">
                 </div>
-                <div class="parent">
-                    <div class="div1 p2"> Nytårs Vinterbadning </div>
-                    <div class="div2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 29. Nov 2022 </div>
-                    <div class="div3 p3-purple"><i class="fa-regular fa-clock"></i> 15:30 </div>
-                    <div class="div4 p3"><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C </div>
+                <div class="event-text-grid">
+                    <div class="div-grid1 p2"> Nytårs Vinterbadning </div>
+                    <div class="div-grid2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 2. Jan 2023 </div>
+                    <div class="div-grid3 p3-purple"><i class="fa-regular fa-clock"></i> 9:30 </div>
+                    <div class="div-grid4 p3"><i class="fa-solid fa-location-dot"></i> Gamle Havnekaj 3, 5000 Odense C </div>
                 </div>
             </div>
-
-
+            
+            <div class="events">
+                <div class="people-count">
+                    <div><i class="fa-solid fa-user"></i></div>
+                    <div class="p4">3/20</div>
+                </div>
+                <div class="events-img">
+                    <img src="images/poster_laesenoter.jpg" alt="Photo Workshop">
+                </div>
+                <div class="event-text-grid">
+                    <div class="div-grid1 p2"> Notatteknik </div>
+                    <div class="div-grid2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 10. Feb 2023 </div>
+                    <div class="div-grid3 p3-purple"><i class="fa-regular fa-clock"></i> 15:00 </div>
+                    <div class="div-grid4 p3"><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C </div>
+                </div>
+            </div>
+            
         </section>
     </main>
     <!--**********Event Popup Section**********-->
