--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="p4">7/35</div>
                 </div>
                 <div class="events-img">
-                    <img src="images/photo-workshop.jpg" alt="Photo Workshop">
+                    <img src="images/juleklip.jpg" alt="Photo Workshop">
                 </div>
                 <div class="event-text-grid">
                     <div class="div-grid1 p2"> Juleklip </div>
@@ -150,7 +150,7 @@
                     <div class="p4">12/35</div>
                 </div>
                 <div class="events-img">
-                    <img src="images/photo-workshop.jpg" alt="Photo Workshop">
+                    <img src="images/innovation-workshop.jpeg" alt="Photo Workshop">
                 </div>
                 <div class="event-text-grid">
                     <div class="div-grid1 p2"> Innovation Workshop </div>
@@ -166,7 +166,7 @@
                     <div class="p4">2/75</div>
                 </div>
                 <div class="events-img">
-                    <img src="images/photo-workshop.jpg" alt="Photo Workshop">
+                    <img src="images/halfdan-timm.jpg" alt="Photo Workshop">
                 </div>
                 <div class="event-text-grid">
                     <div class="div-grid1 p2"> Halfdan Timm, Foredrag </div>
@@ -182,7 +182,7 @@
                     <div class="p4">2/5</div>
                 </div>
                 <div class="events-img">
-                    <img src="images/photo-workshop.jpg" alt="Photo Workshop">
+                    <img src="images/MB-event.jpg" alt="Photo Workshop">
                 </div>
                 <div class="event-text-grid">
                     <div class="div-grid1 p2"> Stavis Å, Mountainbike </div>
@@ -198,7 +198,7 @@
                     <div class="p4">7/++</div>
                 </div>
                 <div class="events-img">
-                    <img src="images/photo-workshop.jpg" alt="Photo Workshop">
+                    <img src="images/juleafslutning.jpg" alt="Photo Workshop">
                 </div>
                 <div class="event-text-grid">
                     <div class="div-grid1 p2"> Juleafslutning </div>
@@ -234,6 +234,22 @@
                 </div>
                 <div class="event-text-grid">
                     <div class="div-grid1 p2"> Notatteknik </div>
+                    <div class="div-grid2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 10. Feb 2023 </div>
+                    <div class="div-grid3 p3-purple"><i class="fa-regular fa-clock"></i> 15:00 </div>
+                    <div class="div-grid4 p3"><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C </div>
+                </div>
+            </div>
+
+            <div class="events">
+                <div class="people-count">
+                    <div><i class="fa-solid fa-user"></i></div>
+                    <div class="p4">2/75</div>
+                </div>
+                <div class="events-img">
+                    <img src="images/christiane-vejloe.jpg" alt="Photo Workshop">
+                </div>
+                <div class="event-text-grid">
+                    <div class="div-grid1 p2"> Christiane Vejlø, Foredrag </div>
                     <div class="div-grid2 p3-purple"><i class="fa-regular fa-calendar-days"></i> 10. Feb 2023 </div>
                     <div class="div-grid3 p3-purple"><i class="fa-regular fa-clock"></i> 15:00 </div>
                     <div class="div-grid4 p3"><i class="fa-solid fa-location-dot"></i> Seebladsgade 1, 5000 Odense C </div>
