--- a/test/search-box.html
+++ b/test/search-box.html
@@ -79,6 +79,11 @@
                 <div class="search-contain">
                     <i class="search fa fa-search" id="search-btn"></i>
                     <input type="text" id="search" placeholder="">
+                    <div class="autocom-box">
+                        <!--List inserted from JS-->
+                        <li>gggg</li>
+                        <li>gh</li>
+                    </div>
                     </div>
                 </div>
             </div>
@@ -299,5 +304,6 @@
 
 <script src="main.js"></script>
 <script src="search.js"></script>
+<script src="suggestions.js"></script>
 
 </html>
