Implementing  search function

--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
                 </div>
 
                 <!--Search box-->
-                <div class="search-box">
-                    <div class="search-icon">
-                        <i class="search fa fa-search"></i>
-                    </div>
-                    <div class="search-input">
-                        
+                <div class="search-contain">
+                    <i class="search fa fa-search" id="search-btn"></i>
+                    <input type="text" id="search" placeholder="">
+                    <div class="autocom-box">
+                        <!--List inserted from JS-->
                     </div>
                 </div>
+ 
             </div>
 
         </section>
@@ -301,5 +301,7 @@
 </body>
 
 <script src="main.js"></script>
+<script src="search.js"></script>
+<script src="suggestions.js"></script>
 
 </html>
